--- a/api/package.json
+++ b/api/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
+    "connect-mongo": "^5.1.0",
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -22,8 +23,10 @@
     "mongoose": "^7.5.2",
     "multer": "^1.4.5-lts.1",
     "nodemon": "^3.0.1",
+    "octokit": "^3.1.2",
     "passport": "^0.6.0",
     "passport-github": "^1.1.0",
+    "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "winston": "^3.10.0"
@@ -35,6 +38,7 @@
     "@types/express-flash": "^0.0.5",
     "@types/express-session": "^1.17.10",
     "@types/multer": "^1.4.11",
+    "@types/node-fetch": "^2.6.9",
     "@types/passport": "^1.0.15",
     "@types/passport-github": "^1.1.12",
     "@types/passport-google-oauth20": "^2.0.14",
