--- a/api/package.json
+++ b/api/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "build": "tsc",
-    "start": "node server.js",
+    "start": "node dist/server.js",
     "dev": "tsnd --trace-warnings --respawn --transpile-only --exit-child server.ts"
   },
   "author": "",
