--- a/api/package.json
+++ b/api/package.json
@@ -29,6 +29,7 @@
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
+    "tsc": "^2.0.4",
     "winston": "^3.10.0"
   },
   "devDependencies": {
