--- a/api/package.json
+++ b/api/package.json
@@ -30,6 +30,7 @@
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
     "tsc": "^2.0.4",
+    "typescript": "^5.3.3",
     "winston": "^3.10.0"
   },
   "devDependencies": {
