--- a/api/package.json
+++ b/api/package.json
@@ -29,8 +29,6 @@
     "passport-github2": "^0.1.12",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-    "tsc": "^2.0.4",
-    "typescript": "^5.3.3",
     "winston": "^3.10.0"
   },
   "devDependencies": {
@@ -44,6 +42,7 @@
     "@types/passport": "^1.0.15",
     "@types/passport-github": "^1.1.12",
     "@types/passport-google-oauth20": "^2.0.14",
-    "@types/passport-local": "^1.0.38"
+    "@types/passport-local": "^1.0.38",
+    "typescript": "^5.3.3"
   }
 }
